z-index fixes, but I don't think canvas will work

--- a/public/assets/css/main.less
+++ b/public/assets/css/main.less
@@ -17,12 +17,10 @@ a[rel="popover"] {
 	width: 100px;
 	height: 100px;
 	position: absolute;
-	span {
-		position: absolute;
-		display: block;
-	}
+	z-index: 6;
 }
 a.component-text {
+	z-index: 5;
 	height: auto;
 	width: auto;
 }
@@ -105,7 +103,6 @@ a.component-text {
 	left:59%;
 	height: 30px;
 	width: 30px;
-	z-index: 10;
 }
 #refrigerant-canvas {
 	position:absolute;
